examples/test/testpolicy14914.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14914
  namespace: namespace401
spec:
  podSelector:
    matchLabels:
      key39: value40
      key48: value30
      key27: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value44
      podSelector:
        matchLabels:
          key46: value36
          key1: value35
